[package]
name = "asp_lib"
version = "0.1.0"
edition = "2021"
description = "Parses Agilent .asp files and converts them into .csv format adding wavenumber column"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
itertools = "0.10.5"
itertools-num = "0.1.3"
polars = {version = "0.30.0", features = ["csv"]}
split-iter = "0.1.0"
walkdir = "2.3.3"
