[package]
name = "asp_lib"
version = "0.1.7"
edition = "2021"
description = "Parses Agilent .asp files and converts them into .csv format adding wavenumber column"
license = "MIT OR Apache-2.0"
repository = "https://github.com/egonik-unlp/asp_lib"
authors = ["Eduardo Gonik <gonik@quimica.unlp.edu.ar>"]
documentation = "https://docs.rs/asp_lib/latest/asp_lib/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
itertools = "0.10.5"
itertools-num = "0.1.3"
split-iter = "0.1.0"
walkdir = "2.3.3"
